--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../src/styles/index.css" />
   </head>
   <body>
+    <div id="board">
+    </div>
+
     <script src="../dist/index.js"></script>
   </body>
 </html>
