--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="../src/styles/colors.css" />
   </head>
   <body>
-    <div id="board"></div>
+    <h1>2048</h1>
+    <div id="full-window">
+      <div id="board-container">
+        <div id="board"></div>
+      </div>
+    </div>
 
     <script src="../dist/index.js"></script>
   </body>
