--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       <div id="board-container">
         <div id="board"></div>
       </div>
+      <div id="stats">
+        <span id="score">SCORE: 0</span>
+      </div>
     </div>
 
     <script src="../dist/index.js"></script>
