game over screen

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <div id="full-window">
-    <h1>2048</h1>
+      <h1>2048</h1>
       <div id="board-container">
         <div id="board"></div>
       </div>
       <div id="stats">
         <span id="score">SCORE: 0</span>
       </div>
+    </div>
+    <div id="game-over">
+      <h1>Game Over</h1>
     </div>
 
     <script src="../dist/index.js"></script>
