--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,12 @@
       </div>
       <div id="stats">
         <span id="score">SCORE: 0</span>
+        <span id="high-score">HIGH SCORE: 0</span>
       </div>
     </div>
     <div id="game-over">
       <h1>Game Over</h1>
+      <div id="game-summary"></div>
     </div>
 
     <script src="../dist/index.js"></script>
