make various colors highly customizable
in colors.css, we can change:
* text color
* board background color
* window background color
* tile text colors
* tile background colors

additionally, add a more formal dynamic color system that updates
based on the highest tile text color or background color (configurable).
colors that can be dynamic are:
* text color
* board background color
* window background color
set their value to "none" in colors.css to specify that they should be
dynamic.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../src/styles/index.css" />
     <link rel="stylesheet" href="../src/styles/colors.css" />
   </head>
-  <body>
+  <body id="body">
     <div id="full-window">
       <h1>2048</h1>
       <div id="board-container">
@@ -23,6 +23,7 @@
       <div id="game-summary"></div>
     </div>
 
+    <script src="../dist/dynamicColors.js"></script>
     <script src="../dist/index.js"></script>
   </body>
 </html>
