--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <div id="game-over">
       <h1>Game Over</h1>
       <div id="game-summary"></div>
+     <div class="links">
+        <a href="https://jamespeilunli.github.io/2048">Play Again</a>
+        <a href="https://github.com/jamespeilunli/2048">GitHub</a>
+      </div>
     </div>
 
     <script src="dynamicColors.js"></script>
