--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <script src="dynamicColors.js"></script>
+    <script src="swipingManager.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
