--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2048</title>
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="icon" href="assets/favicon.png" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="colors.css" />
   </head>
@@ -22,7 +22,7 @@
     <div id="game-over">
       <h1>Game Over</h1>
       <div id="game-summary"></div>
-     <div class="links">
+      <div class="links">
         <a href="https://jamespeilunli.github.io/2048">Play Again</a>
         <a href="https://github.com/jamespeilunli/2048">GitHub</a>
       </div>
