Switch to js modules and use json to store color config

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>2048</title>
     <link rel="icon" href="assets/favicon.png" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="colors.css" />
   </head>
   <body id="body">
     <div id="full-window">
@@ -28,8 +27,6 @@
       </div>
     </div>
 
-    <script src="dynamicColors.js"></script>
-    <script src="swipingManager.js"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
