--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2048</title>
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="icon" href="assets/favicon.png" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="colors.css" />
   </head>
   <body id="body">
     <div id="full-window">
@@ -22,14 +21,12 @@
     <div id="game-over">
       <h1>Game Over</h1>
       <div id="game-summary"></div>
-     <div class="links">
+      <div class="links">
         <a href="https://jamespeilunli.github.io/2048">Play Again</a>
         <a href="https://github.com/jamespeilunli/2048">GitHub</a>
       </div>
     </div>
 
-    <script src="dynamicColors.js"></script>
-    <script src="swipingManager.js"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
