--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>Game Over</h1>
       <div id="game-summary"></div>
       <div class="links">
-        <a href="https://jamespeilunli.github.io/2048">Play Again</a>
+        <span id="play-again">Play Again</span>
         <a href="https://github.com/jamespeilunli/2048">GitHub</a>
       </div>
     </div>
