--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       <h1>Game Over</h1>
       <div id="game-summary"></div>
       <div class="links">
-        <span id="play-again">Play Again</span>
+        <span id="play-again-button">Play Again</span>
+
+        <input type="file" id="load-theme-button" accept=".json" hidden />
+        <label for="load-theme-button">Load Theme</label>
+
         <a href="https://github.com/jamespeilunli/2048">GitHub</a>
       </div>
     </div>
