Add MenuManager for managing paused and game over text

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div id="menu">
-          <h1>Game Over</h1>
+          <h1 id="menu-header">Paused</h1>
           <div id="game-summary"></div>
           <div class="links">
             <span id="play-again-button">Play Again</span>
