--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,17 @@
           </div>
         </div>
         <div id="menu">
-          <h1 id="menu-header">Paused</h1>
-          <div id="game-summary"></div>
-          <div class="links">
-            <span id="play-again-button">Play Again</span>
+          <div class="menu-content">
+            <h1 id="menu-header">Paused</h1>
+            <div id="game-summary"></div>
+            <div class="links">
+              <span id="play-again-button">Play Again</span>
 
-            <input type="file" id="load-theme-button" accept=".json" hidden />
-            <label for="load-theme-button">Load Theme</label>
+              <input type="file" id="load-theme-button" accept=".json" hidden />
+              <label for="load-theme-button">Load Theme</label>
 
-            <a href="https://github.com/jamespeilunli/2048">GitHub</a>
+              <a href="https://github.com/jamespeilunli/2048">GitHub</a>
+            </div>
           </div>
         </div>
       </div>
